derive/tests/fail/01-too-many-lifetimes.stderr
error: At most 4 lifetime parameters are allowed!
 --> tests/fail/01-too-many-lifetimes.rs:5:26
  |
5 | struct S<'a, 'b, 'c, 'd, 'e, T> {
  |                          ^^
